# readerwriterqueue

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  atomicops.h  conanfile.py  readerwritercircularbuffer.h  readerwriterqueue.h
benchmarks/: bench.cpp  makefile
benchmarks/ext/folly/: ProducerConsumerQueue.h
cmake/: config.cmake.in
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: .gitignore
tests/common/: simplethread.cpp  simplethread.h
tests/stabtest/: makefile  stabtest.cpp
tests/stabtest/msvc10/: stabtest.sln  stabtest.vcxproj
tests/stabtest/msvc12/: stabtest.sln  stabtest.vcxproj
tests/unittests/: makefile  minitest.h  unittests.cpp
tests/unittests/msvc10/: unittests.sln  unittests.vcxproj
tests/unittests/msvc12/: unittests.sln  unittests.vcxproj
